--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ nav{
 	top: 0%;
 	left: 0;
 	border-radius: 50%;
-	background: rgba(204, 102, 255, 1)
 }
 
 .feature img{
@@ -99,4 +98,35 @@ nav{
 .four{
 	bottom: 150px;
 	right: 350px;
+}
+
+.risu{
+	width: 200px;
+	position: absolute;
+	top: 50%;
+	left: 35%;
+	transform:translateY(-50%);
+	z-index: 1;
+}
+.controls{
+	position: absolute;
+	right: 10%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+.controls h3{
+	margin: 15px 0;
+	color:#fff;
+}
+
+#upBtn{
+	width: 15px;
+	cursor: pointer;
+}
+
+
+#downBtn{
+	width: 15px;
+	cursor: pointer;
+	transform: rotate(180deg);
 }
